--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,6 @@
 [submodule "ui/GridDrawer"]
 	path = ui/GridDrawer
 	url = git@github.com:eltech-anykeyers/ai_GridDrawerWidget.git
-[submodule "ui/ImageView"]
-	path = ui/ImageView
+[submodule "ui/ImageViewWidget"]
+	path = ui/ImageViewWidget
 	url = git@github.com:eltech-anykeyers/ai_ImageView.git
