--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "ui/ImageViewWidget"]
 	path = ui/ImageViewWidget
 	url = git@github.com:eltech-anykeyers/ai_ImageView.git
+[submodule "ui/ImageListViewWidget"]
+	path = ui/ImageListViewWidget
+	url = git@github.com:eltech-anykeyers/ai_ImageListViewWidget.git
